[package]
name = "events-to-db"
version = "0.0.1"
authors = ["Actyx AG <developer@actyx.io>"]
edition = "2018"

[dependencies]
actyxos_sdk = { version = "~0.5", features = ["client"] }
anyhow = "~1.0"
futures = "~0.3"
tokio-postgres = { version="~0.6", features = ["with-serde_json-1"] }
serde = { version = "~1.0", features = ["derive"] }
serde_json = { version = "~1.0", features = ["raw_value"] }
structopt = "~0.3"
tokio = { version = "~0.3", features = ["full"] }
tokio-compat-02 = "~0.1"
itertools = "~0.9"
backtrace = "~0.3"
async-trait = "~0.1"
tracing = "~0.1"
env_logger = "~0.8"
futures-batch = "~0.6"

[dev-dependencies]
